--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -127,8 +127,8 @@ nav {
 
 #hero .container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
 }
 
 .hero-content {
@@ -147,15 +147,15 @@ nav {
     margin-bottom: 30px;
     line-height: 1.5;
 }
-
-.hero-image img {
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    transition: transform 0.3s ease;
+.hero-image {
+    flex: 1;
+    text-align: center;
 }
-
-.hero-image img:hover {
-   transform: scale(1.05);
+.hero-image img{
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
 }
 
 / ---------- Common Styles ---------- /
