--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -151,12 +151,16 @@ nav {
     flex: 1;
     text-align: center;
 }
-.hero-image img{
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+.hero-image img {
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease;
 }
+
+.hero-image img:hover {
+   transform: scale(1.05);
+}
+
 
 / ---------- Common Styles ---------- /
 
